--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npm run seeds && node server.js",
+    "seeds": "node ./seeds/index.js"
   },
   "repository": {
     "type": "git",
